fix overflow on subnav

--- a/app/assets/stylesheets/static_pages.css.sass
+++ b/app/assets/stylesheets/static_pages.css.sass
@@ -281,6 +281,7 @@ div[id^='section-prototyping']
     vertical-align: center
     -webkit-transition: 0s ease
     transition: 0s ease
+    overflow: hidden
     a
       height: 0px
       position: absolute
@@ -328,6 +329,7 @@ div[id^='section-prototyping']
       background: -webkit-linear-gradient($black, $black) left center no-repeat
       background: linear-gradient($black, $black) left center no-repeat
       background-size: 4px 100%
+      overflow: visible
     &.active, &:hover, &:hover .note, &:hover .triangle
       opacity: 1
     &.active
